challenges-live-malware/challenge_015_live/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: challenge-015-live
  labels:
    name: challenge-015-live
    challenge: "015"
    purpose: malware-analysis
    blueteamvillage.org/allow-outbound: "true"
